# video_labeler

./: .gitignore  CMakeLists.txt  README.md  checkLabels.py  combineLabels.py  main.cpp  video_labeler.pro
cfg/: yolo-v3-tiny-pan-mixup-torpedo.cfg
params/: yolo_torpedo.yaml
src/: darknet_util.cpp  darknet_util.h  main.cpp  main.h
src/yolo/: darknet_util.cpp  darknet_util.h  yolo_detector.cpp  yolo_torpedo_detector.h
tracker/: kcftracker.cpp
